# omp

./: .bazelignore  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  defs.bzl  emsdk-llvm-map.json  extensions.bzl  repositories.bzl  versions.env
.bcr/: metadata.json  presubmit.yml  source.template.json
.github/workflows/: _build-platform.yml  _build-wasm.yml  auto-update.yml  backfill-releases.yml  build.yml  ci.yml  full-battery.yml  release.yml  test.yml
docker/: Dockerfile  Dockerfile.glibc
examples/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  atomic_counter.c  hello_omp.c  omp_api.c  scaling_test.cc
patches/: libomp-wasm-blocktime.patch
scripts/: check_omp_updates.py  generate_release_metadata.py  resolve_emsdk_for_llvm.py  test-omp.py
