module(
    name = "omp",
    version = "21.1.8",
    bazel_compatibility = [">=7.0.0"],
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.4")

# download prebuilt libomp for host platform
_omp = use_extension("//:extensions.bzl", "omp")
use_repo(_omp, "libomp")
