load("@rules_cc//cc:defs.bzl", "cc_test")

_OMP_COPTS = select({
    "@platforms//os:macos": ["-Xclang", "-fopenmp"],
    "@platforms//os:windows": ["/openmp"],
    "//conditions:default": ["-fopenmp"],
})

# basic: parallel hello world
cc_test(
    name = "hello_omp",
    srcs = ["hello_omp.c"],
    copts = _OMP_COPTS,
    deps = ["@omp"],
)

# e2e: atomic counter across threads
cc_test(
    name = "atomic_counter",
    srcs = ["atomic_counter.c"],
    copts = _OMP_COPTS,
    deps = ["@omp"],
    env = {"OMP_NUM_THREADS": "4"},
)

# sanity: omp API queries (no parallel region)
cc_test(
    name = "omp_api",
    srcs = ["omp_api.c"],
    deps = ["@omp"],
)

# link mode: static (libomp.a)
cc_test(
    name = "hello_omp_static",
    srcs = ["hello_omp.c"],
    copts = _OMP_COPTS,
    linkstatic = True,
    deps = ["@omp"],
)

# link mode: dynamic (libomp.dylib / libomp.so)
cc_test(
    name = "hello_omp_dynamic",
    srcs = ["hello_omp.c"],
    copts = _OMP_COPTS,
    linkstatic = False,
    deps = ["@omp"],
)
