"""Example programs demonstrating prebuilt libomp usage."""

module(name = "examples", version = "0.0.0")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "libomp", version = "0.0.0")

local_path_override(module_name = "libomp", path = "..")
