"""Example programs demonstrating prebuilt libomp usage."""

module(name = "examples", version = "0.0.0")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "libomp", version = "0.0.0")
bazel_dep(name = "rules_shell", version = "0.4.1")
bazel_dep(name = "google_benchmark", version = "1.9.4")
bazel_dep(name = "emsdk", version = "4.0.17")

local_path_override(module_name = "libomp", path = "..")
